# file2txt

./: .env.example  .env.markdown  .gitignore  README.md  file2txt.py  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
design/: app-spec.md
examples/Bitdefender-Labs-Report-X-creat6958-en-EN/: markdown.md
examples/csv-test/: markdown.md
examples/csv_input/: markdown.md
examples/fanged_data_defang_f/: markdown.md
examples/fanged_data_defang_t/: markdown.md
examples/html_input/: markdown.md
examples/image_input/: markdown.md
examples/markdown_input/: markdown.md
examples/pdf_input/: markdown.md
examples/ppt_input/: markdown.md
examples/unit42-Fighting-Ursa-Luring-Targets-With-Car-for-Sale/: markdown.md
examples/word_input_defang_f/: markdown.md
examples/word_input_defang_t/: markdown.md
examples/xls_input/: markdown.md
file2txt/: __init__.py  converter.py  fanger.py  image_processor.py  openai_processor.py
file2txt/parsers/: __init__.py  ai_file_parser.py  core.py  csv_file_parser.py  excel_file_parser.py  html_article_file_parser.py  html_file_parser.py  image_file_parser.py  markdown_file_parser.py  marker_file_parser.py  pdf_file_parser.py  word_file_parser.py
tests/: README.md  base_test.py  download_example_files.py  download_test_files.py  test_1_output_file_generation.py  test_1_positive_tests.py  test_2_negative_tests.py
tests/files/csv/: csv-test.csv
tests/files/doc/: fanged_data.doc  fanged_data.docx  fanged_data_good.doc
tests/files/html/: fanged_data.html  fanged_data_decoded.html  fanged_data_decoded_cdata.html  fanged_data_encoded.html  group-ib_roasting_0ktapus-html-only.html
tests/files/html-real/: bitdefender-fragments-of-cross-platform-backdoor-hint-at-larger-mac-os-attack.html  unit42-Fighting-Ursa-Luring-Targets-With-Car-for-Sale.html  unit42-mallox-ransomware.html  virustotal-malware-trends.html
tests/files/html/fanged_data.fld/: filelist.xml
tests/files/ppt/: fanged_data.ppt  fanged_data.pptx
tests/files/txt/: threat-report.txt
tests/files/xls/: xls-test.xls  xls-test.xlsx
tests/src/: test_converter.py  test_fanger.py  test_file2txt.py  test_image_processor.py
tests/src/parsers/: test_core.py  test_csv_file_parser.py  test_excel_file_parser.py  test_html_file_parser.py  test_image_file_parser.py  test_markdown_file_parser.py  test_marker_file_parser.py  test_marker_online.py
