[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file2txt"
version = "1.0.0"
authors = [
  { name = "dogesec" }
]
maintainers = [
  { name = "dogesec" }
]
description = "file2txt is a Python library takes common file formats and turns them into plain text (a txt file) with Markdown styling."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


dependencies = [
    'pillow>=10.0.1',
    'bs4>=0.0.2',
    'google-cloud-vision>=3.4.5',
    'grpcio-status>=1.62.2',
    'markdownify>=0.14.1',
    'python-dotenv>=1.0.1',
    'readability-lxml>=0.8.1',
    'lxml_html_clean>=0.1.1',
    'tabulate>=0.9.0',
    'pandas>=2.2.2',
    'filetype>=1.2.0',
    'requests>=2.32.4',
]

[tool.hatch.metadata]
allow-direct-references = true


[project.urls]
Homepage = "https://github.com/muchdogesec/file2txt"
Issues = "https://github.com/muchdogesec/file2txt/issues"
"dogesec HQ" = "https://dogesec.com"
